7/app-deployment-and-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-nginx
  template:
    metadata:
      labels:
        app: app1-nginx
    spec:
      containers:
      - name: app1-nginx
        image: stacksimplify/kube-nginxapp1:1.0.0
        ports:
        - containerPort: 80
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: api-nginx-nodeport-service
  labels:
    app: app1-nginx
  # annotations:
#     alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  type: NodePort
  selector:
    app: app1-nginx
  ports:
  - port: 80
    targetPort: 80
